# Talkative

./: Cargo.toml  Pipfile
.cargo/: config.toml
src/: impl.rs  lib.rs  structs.rs
