[package]
name = "Talkative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ct-python = "0.5.5"
serde = "1.0.152"
serde_json = "1.0.93"
indradb-lib = "3.0.4"

[lib]
name = "talkative"
crate-type = ["cdylib"]
